# taskflow

./: Cargo.toml  Development.md  LICENSE  PLAN.md  README.md
src/: app.rs  config.rs  logger.rs  main.rs  processor.rs  queue.rs
src/ui/: controls.rs  drop_zone.rs  mod.rs  queue_list.rs
