[package]
name = "taskflow"
version = "0.1.0"
edition = "2024"
authors = ["Shane Poppleton <shane@bjja.com.au>"]
description = "A lightweight GUI application for batch file procesing"
license = "MIT"
keywords = ["gui", "batch", "processing", "queue"]

[dependencies]
chrono = "0.4.43"
dirs = "6.0.0"
eframe = { version = "0.33.3", features = ["default_fonts", "glow", "persistence"] }
egui = "0.33.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
